backend/ai_test_output.txt
C:\Users\rahul\Downloads\SEO AI Agent\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Γ¿» Unable to compile TypeScript:
src/test-ai-service.ts(12,34): error TS2552: Cannot find name 'AiOrchestrator'. Did you mean 'orchestrator'?

    at createTSError (C:\Users\rahul\Downloads\SEO AI Agent\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\rahul\Downloads\SEO AI Agent\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\rahul\Downloads\SEO AI Agent\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\rahul\Downloads\SEO AI Agent\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\rahul\Downloads\SEO AI Agent\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\rahul\Downloads\SEO AI Agent\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2552 ]
}
